# rust-snake

./: .gitignore  Cargo.toml
src/: main.rs
